--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,185 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
+}
+
+/*------------------
+ header styles  
+------------------*/
+header {
+    width: 100%;
+    background: #ff8f0e10;
+}
+
+/*------------------
+ Nav-bar styles 
+------------------*/
+.nav-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 50px;
+
+}
+
+.logo {
+    color: #131313;
+    font-size: 24px;
+    font-weight: 700;
+
+}
+
+.menu-items ul {
+    display: flex;
+    gap: 50px;
+}
+
+.menu-items li {
+    list-style: none;
+}
+
+.menu-items a {
+    color: #424242;
+    font-weight: 500;
+    text-decoration: none;
+    list-style: none;
+}
+
+/*-------------------------
+ banner styles 
+------------------------ */
+.banner {
+    margin-top: 116px;
+    padding-bottom: 30px;
+}
+
+.banner-items {
+    text-align: center;
+}
+
+.banner-heading {
+    color: #131313;
+    font-size: 50px;
+    font-weight: 700;
+}
+
+.banner-description {
+    color: #727272;
+    font-size: 20px;
+    margin: 30px;
+}
+
+.banner-btn {
+    font-size: 20px;
+    font-weight: 600;
+    color: #FFFFFF;
+    background-color: #FF900E;
+    width: 180px;
+    height: 64px;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 50px;
+}
+/*-------------------------------
+ Quick List styles 
+--------------------------------*/
+.quick-list{
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    margin-left: 250px;
+    margin-top: 80px;
+}
+.quick-list-pictures{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+}
+.quick-list-picture img{
+    width: 242px;
+    height: 242px;
+}
+
+.quick-list-info{
+    margin-left: 70px;
+}
+.quick-list-heading{
+    color: #727272;
+    font-size: 45px;
+    font-weight: 100;
+}
+.span-st1{
+    color: #131313;
+    font-weight: 700;
+}
+.span-st2{
+    color: #FF900E;
+    font-weight: 700;
+}
+.quick-list-description{
+    color: #727272;
+    padding-right: 300px;
+    margin-bottom: 30px;
+    margin-top: 24px;
+}
+.quick-list-btn{
+    font-size: 20px;
+    font-weight: 600;
+    color: #FFFFFF;
+    background-color: #FF900E;
+    width: 180px;
+    height: 64px;
+    border: none;
+    border-radius: 8px;
+}
+/*================================
+ Media query for mobile devices 
+=================================*/
+
+@media only screen and (max-width: 576px) {
+
+    /* Media query for Nav-bar and logo */
+    .nav-bar {
+        flex-direction: column;
+    }
+
+    .menu-items ul {
+        flex-direction: column;
+        text-align: center;
+        margin-top: 30px;
+        font-size: 24px;
+    }
+    /* media query for quick list */
+    .quick-list{
+        flex-direction: column;
+        margin-left: 0;
+        margin: 0;
+        align-items: center;
+        /* text-align: center; */
+        margin-top: 20px;
+    }
+    .quick-list-pictures{
+        grid-template-columns: 1fr;
+    }
+    .quick-list-picture img{
+        width: 342px;
+        height: 342px;
+    }
+    .quick-list-heading{
+        text-align: center;
+        margin-right: 90px;
+        margin-top: 20px;
+        font-size: 30px;    
+    }
+    .quick-list-description{
+        text-align: center;
+        margin-right: 60px;
+        padding-right: 0;
+    }
+    .quick-list-btn{
+        margin-left: 120px;
+    }
+
 }
