--- a/styles/style.css
+++ b/styles/style.css
@@ -82,49 +82,57 @@ header {
     border-radius: 8px;
     margin-bottom: 50px;
 }
+
 /*-------------------------------
  Quick List styles 
 --------------------------------*/
-.quick-list{
+.quick-list {
     display: flex;
     align-items: center;
     margin: 0 auto;
     margin-left: 250px;
     margin-top: 80px;
 }
-.quick-list-pictures{
+
+.quick-list-pictures {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
 }
-.quick-list-picture img{
+
+.quick-list-picture img {
     width: 242px;
     height: 242px;
 }
 
-.quick-list-info{
+.quick-list-info {
     margin-left: 70px;
 }
-.quick-list-heading{
+
+.quick-list-heading {
     color: #727272;
     font-size: 45px;
     font-weight: 100;
 }
-.span-st1{
+
+.span-st1 {
     color: #131313;
     font-weight: 700;
 }
-.span-st2{
+
+.span-st2 {
     color: #FF900E;
     font-weight: 700;
 }
-.quick-list-description{
+
+.quick-list-description {
     color: #727272;
     padding-right: 300px;
     margin-bottom: 30px;
     margin-top: 24px;
 }
-.quick-list-btn{
+
+.quick-list-btn {
     font-size: 20px;
     font-weight: 600;
     color: #FFFFFF;
@@ -134,6 +142,102 @@ header {
     border: none;
     border-radius: 8px;
 }
+
+/*--------------------------------
+ Features you will love & enjoy 
+--------------------------------*/
+.features-container {
+    width: 70%;
+    margin: auto;
+
+}
+
+.features {
+    display: flex;
+    margin-top: 130px;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.text-container {
+    margin-right: 55px;
+}
+
+.vertical-line {
+    display: flex;
+    gap: 10px;
+}
+
+.line {
+    border-left: 5px solid #FF900E;
+    height: 106px;
+}
+
+.feature-heading {
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.feature-description {
+    color: #727272;
+    margin-bottom: 30px;
+    padding-right: 140px;
+}
+
+.box-container {
+    margin-left: 10px;
+}
+
+.box {
+    width: 586px;
+    margin-bottom: 24px;
+    box-shadow: 5px 5px 15px #e2e2e2;
+    padding: 30px;
+    border-radius: 8px;
+}
+
+.box-heading {
+    color: #131313;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.box-description {
+    color: #727272;
+}
+
+.img-container img {
+    height: 800px;
+    margin-bottom: 100px;
+    padding-left: 50px;
+}
+
+.extra-box {
+    background: #FF900E;
+    width: 342px;
+    height: 200px;
+    padding: 46px;
+    align-items: center;
+    text-align: center;
+    border-radius: 8px;
+    position: absolute;
+    margin-top: 700px;
+}
+
+.ex-box-heading {
+    color: #FFFFFF;
+    font-size: 40px;
+}
+
+.ex-box-description {
+    color: #FFFFFF;
+    font-size: 25px;
+}
+
+
 /*================================
  Media query for mobile devices 
 =================================*/
@@ -151,8 +255,9 @@ header {
         margin-top: 30px;
         font-size: 24px;
     }
+
     /* media query for quick list */
-    .quick-list{
+    .quick-list {
         flex-direction: column;
         margin-left: 0;
         margin: 0;
@@ -160,26 +265,62 @@ header {
         /* text-align: center; */
         margin-top: 20px;
     }
-    .quick-list-pictures{
+
+    .quick-list-pictures {
         grid-template-columns: 1fr;
     }
-    .quick-list-picture img{
+
+    .quick-list-picture img {
         width: 342px;
         height: 342px;
     }
-    .quick-list-heading{
+
+    .quick-list-heading {
         text-align: center;
         margin-right: 90px;
         margin-top: 20px;
-        font-size: 30px;    
+        font-size: 30px;
     }
-    .quick-list-description{
+
+    .quick-list-description {
         text-align: center;
         margin-right: 60px;
         padding-right: 0;
     }
-    .quick-list-btn{
+
+    .quick-list-btn {
         margin-left: 120px;
+    }
+
+    /* features media query */
+
+    .feature-heading{
+        margin: auto;
+        text-align: center;
+        margin-top: 20px;
+    }
+    .feature-description{
+        margin: auto;
+        text-align: center;
+        padding:0;
+        margin-left: 50px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .features {
+        flex-direction: column;
+        margin: auto;
+        text-align: center;
+    }
+    .img-container img {
+        width: 500px;
+        height: 700px;
+        padding: 0;
+        
+    }
+    .extra-box{
+        margin-left:100px;
+        margin-top: 600px;
     }
 
 }
