--- a/styles/style.css
+++ b/styles/style.css
@@ -18,9 +18,10 @@ header {
 ------------------*/
 .nav-bar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding-top: 50px;
+    margin: 0 140px;
 
 }
 
