--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,7 @@ header {
 
 /*--------------------------------
  Features you will love & enjoy 
+ styles
 --------------------------------*/
 .features-container {
     width: 70%;
@@ -238,6 +239,66 @@ header {
     font-size: 25px;
 }
 
+/*----------------------------------
+ facts section styles  and achievement
+-----------------------------------*/
+.facts {
+    margin: auto;
+    width: 80%;
+}
+
+.fact-heading {
+    font-size: 45px;
+    color: #131313;
+    margin-top: 130px;
+}
+
+.fact-description {
+    color: #727272;
+    margin-top: 24px;
+}
+
+/* achievement */
+.achievements {
+    margin: auto;
+    width: 70%;
+    margin-top: 100px;
+    margin-bottom: 130px;
+}
+
+.achievement-container {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+
+
+}
+
+.achievement {
+    align-items: center;
+    width: 241px;
+    height: 241px;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    padding: 45px;
+    cursor: pointer;
+}
+
+.achievement:hover {
+    background-color: #ffcccc;
+    transform: scale(1.1) rotate(360deg);
+    transition: 2s ease-in-out;
+}
+
+.achievement-title {
+    font-size: 45px;
+    color: #414141;
+    margin: 15px;
+}
+
+.achievement-info {
+    color: #727272;
+}
 
 /*================================
  Media query for mobile devices 
@@ -295,33 +356,61 @@ header {
 
     /* features media query */
 
-    .feature-heading{
+    .feature-heading {
         margin: auto;
         text-align: center;
         margin-top: 20px;
     }
-    .feature-description{
+
+    .feature-description {
         margin: auto;
         text-align: center;
-        padding:0;
+        padding: 0;
         margin-left: 50px;
         margin-top: 20px;
         margin-bottom: 20px;
     }
+
     .features {
         flex-direction: column;
         margin: auto;
         text-align: center;
     }
+
     .img-container img {
         width: 500px;
         height: 700px;
         padding: 0;
-        
+
     }
-    .extra-box{
-        margin-left:100px;
+
+    .extra-box {
+        margin-left: 100px;
         margin-top: 600px;
+    }
+
+    /* facts media query */
+
+    .fact-heading {
+        text-align: center;
+    }
+
+    .fact-description {
+        text-align: center;
+    }
+
+    /* Achievement media query */
+    .achievements{
+        margin: auto;
+        width: auto;
+    }
+    .achievement-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 100px;
+
     }
 
 }
