--- a/styles/style.css
+++ b/styles/style.css
@@ -333,6 +333,57 @@ header {
     filter: grayscale(100%);
 }
 
+/*------------------------------
+ Contact us section 
+--------------------------------*/
+.contact-us{
+    margin: auto;
+    width: 80%;
+    background-color: #ff8f0e8d;
+    border-radius: 8px;
+}
+.contact-us-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 100px;
+    padding: 50px 0;
+    margin-bottom: 200px;
+}
+.text{
+    font-size: 45px;
+    color: #FFFFFF ;
+}
+.contact-us-link{
+    text-align: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+.links{
+    margin-right: 20px;
+}
+.contact-us-form{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+.link-style{
+    padding: 15px 20px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    outline: none;
+}
+.link-style-submit{
+    background: #FF900E;
+    padding: 15px 20px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
 /*================================
  Media query for mobile devices 
 =================================*/
@@ -461,6 +512,17 @@ header {
     .sponsor-img-container{
         flex-direction: column;
         gap: 40px;
+    }
+    /* contact us media query */
+    .contact-us{
+        margin: auto;
+        width: auto;
+    }
+    .contact-us-container{
+        flex-direction: column;
+    }
+    .contact-us-form{
+        margin-top: 50px;
     }
 
 }
