--- a/styles/style.css
+++ b/styles/style.css
@@ -258,7 +258,9 @@ header {
     margin-top: 24px;
 }
 
-/* achievement */
+/*--------------------------------
+ achievement
+ -------------------------------*/
 .achievements {
     margin: auto;
     width: 70%;
@@ -318,7 +320,7 @@ header {
     margin-bottom: 20px;
 }
 
-.sponsor-description{
+.sponsor-description {
     color: #727272;
 
 }
@@ -329,45 +331,52 @@ header {
     align-items: center;
     margin-top: 50px;
 }
-.sponsor-img{
+
+.sponsor-img {
     filter: grayscale(100%);
 }
 
 /*------------------------------
  Contact us section 
 --------------------------------*/
-.contact-us{
+.contact-us {
     margin: auto;
     width: 80%;
     background-color: #ff8f0e8d;
     border-radius: 8px;
 }
-.contact-us-container{
+
+.contact-us-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 100px;
     padding: 50px 0;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
-.text{
+
+.text {
     font-size: 45px;
-    color: #FFFFFF ;
+    color: #FFFFFF;
 }
-.contact-us-link{
+
+.contact-us-link {
     text-align: center;
     margin-top: 20px;
     gap: 20px;
 }
-.links{
+
+.links {
     margin-right: 20px;
 }
-.contact-us-form{
+
+.contact-us-form {
     display: flex;
     flex-direction: column;
     width: 500px;
 }
-.link-style{
+
+.link-style {
     padding: 15px 20px;
     margin-bottom: 15px;
     border: none;
@@ -375,7 +384,10 @@ header {
     font-size: 20px;
     outline: none;
 }
-.link-style-submit{
+
+.link-style-submit {
+    color: #FFFFFF;
+    font-size: 20px;
     background: #FF900E;
     padding: 15px 20px;
     margin-bottom: 15px;
@@ -384,13 +396,33 @@ header {
     font-size: 20px;
 }
 
+/*-------------------------------
+ footer Section styles 
+-------------------------------*/
+footer {
+    margin: auto;
+    width: 80%;
+    background: #ff8f0e10;
+    border-radius: 8px;
+}
+
+.footer-para {
+    color: #727272;
+    padding: 40px;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 200px;
+}
+
 /*================================
  Media query for mobile devices 
 =================================*/
 
 @media only screen and (max-width: 576px) {
 
-    /* Media query for Nav-bar and logo */
+    /*--------------------------------------
+     Media query for Nav-bar and logo 
+    ---------------------------------------*/
     .nav-bar {
         flex-direction: column;
     }
@@ -402,7 +434,9 @@ header {
         font-size: 24px;
     }
 
-    /* media query for quick list */
+    /*-------------------------------
+     media query for quick list 
+    --------------------------------*/
     .quick-list {
         flex-direction: column;
         margin-left: 0;
@@ -438,7 +472,9 @@ header {
         margin-left: 120px;
     }
 
-    /* features media query */
+    /*------------------------------
+     features media query 
+    ------------------------------*/
 
     .feature-heading {
         margin: auto;
@@ -473,7 +509,9 @@ header {
         margin-top: 600px;
     }
 
-    /* facts media query */
+    /*------------------------------
+     facts media query 
+    ------------------------------*/
 
     .fact-heading {
         text-align: center;
@@ -483,7 +521,9 @@ header {
         text-align: center;
     }
 
-    /* Achievement media query */
+    /*------------------------------
+     Achievement media query 
+     ------------------------------*/
     .achievements {
         margin: auto;
         width: auto;
@@ -498,31 +538,53 @@ header {
 
     }
 
-    /* Sponsor section media query */
-    .sponsors{
+    /*-------------------------------
+     Sponsor section media query 
+    -------------------------------*/
+    .sponsors {
         margin: auto;
         width: auto;
     }
-    .sponsor-container{
+
+    .sponsor-container {
         margin: 100px;
     }
+
     .sponsor-heading {
         font-size: 30px;
     }
-    .sponsor-img-container{
+
+    .sponsor-img-container {
         flex-direction: column;
         gap: 40px;
     }
-    /* contact us media query */
-    .contact-us{
+
+    /*-------------------------
+     contact us media query 
+    --------------------------*/
+    .contact-us {
         margin: auto;
         width: auto;
     }
-    .contact-us-container{
+
+    .contact-us-container {
         flex-direction: column;
     }
-    .contact-us-form{
+
+    .contact-us-form {
         margin-top: 50px;
+    }
+
+    /*------------------------
+     Footer media query 
+    ------------------------*/
+    footer {
+        margin: auto;
+        width: 100%;
+    }
+
+    .footer-para {
+        margin: 0;
     }
 
 }
